tests/data/placebo/test_security_group_batch_unused/ec2.DescribeSecurityGroupReferences_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroupReferenceSet": [],
        "ResponseMetadata": {}
    }
}
